--- a/jenkins/ansible/ansible.cfg
+++ b/jenkins/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory.yaml
 roles_path = roles/
-private_key_file = ~/.ssh/aws-ec2
+# private_key_file = ~/.ssh/aws-ec2
 host_key_checking = false
 callbacks_enabled = profile_tasks
