--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ override.tf.json
 *_override.tf.json
 
 # Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock
+.terraform.lock.hcl
 .terraform.tfstate.lock.info
 
 # Include override files you do wish to add to version control using negated pattern
